package edu.hitsz.aircraft;

/**
 * 精英敌机
 * 可直线射击
 *
 * @author fengyang
 */
public class EliteEnemy extends AbstractAircraft {
    
    public EliteEnemy(int health) {
        super(health);
    }
}
