package edu.hitsz.aircraft;

public interface EnemyFactory {
    
    AbstractAircraft createEnemy();
}
