package edu.hitsz.aircraft;

/**
 * 普通敌机
 * 不可射击
 *
 * @author hitsz
 * @author fengyang
 */
public class MobEnemy extends AbstractAircraft {
    
    public MobEnemy(int health) {
        super(health);
    }
}
