package edu.hitsz.aircraft;

/**
 * 超级精英敌机
 * 可扇形射击，左右移动
 *
 * @author fengyang
 */
public class SuperEliteEnemy extends AbstractAircraft {
    
    public SuperEliteEnemy(int health) {
        super(health);
    }
}
